--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
     <!-- Easter egg for the curious 🕵️ -->
     <meta name="developer" content="Built with ♥️ by Kunal - probably while listening to rock music and drinking espresso" />
     <meta name="easter-egg" content="You found it! Email me 'I found the meta easter egg' for a virtual high-five 🚀" />
+    
+    <!-- GitHub Pages SPA routing fix -->
+    <script type="text/javascript">
+      // Handle GitHub Pages client-side routing
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <div id="root"></div>
