--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/kunal-website/favicon.svg" />
-    <link rel="alternate icon" href="/kunal-website/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="/kunal-website/logo-192.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/logo-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kunal B - AI Engineer</title>
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#667eea" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="manifest" href="/kunal-website/site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,11 +36,11 @@
         }
       }(window.location))
     </script>
-    <script type="module" crossorigin src="/kunal-website/assets/js/index-D-_Jam-j.js"></script>
-    <link rel="modulepreload" crossorigin href="/kunal-website/assets/js/react-vendor-DweBbekM.js">
-    <link rel="modulepreload" crossorigin href="/kunal-website/assets/js/router-BPkGFeuO.js">
-    <link rel="modulepreload" crossorigin href="/kunal-website/assets/js/framer-motion-DHdWn2Vc.js">
-    <link rel="stylesheet" crossorigin href="/kunal-website/assets/css/index-DLtflmsv.css">
+    <script type="module" crossorigin src="/assets/js/index-BiNUeMyf.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/js/react-vendor-DweBbekM.js">
+    <link rel="modulepreload" crossorigin href="/assets/js/router-BPkGFeuO.js">
+    <link rel="modulepreload" crossorigin href="/assets/js/framer-motion-DHdWn2Vc.js">
+    <link rel="stylesheet" crossorigin href="/assets/css/index-DLtflmsv.css">
   </head>
   <body>
     <div id="root"></div>
