--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3K8218118K"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-3K8218118K', {
+        // Privacy-friendly settings
+        anonymize_ip: true,
+        allow_google_signals: false,
+        allow_ad_personalization_signals: false
+      });
+    </script>
+    
     <!-- Easter egg for the curious 🕵️ -->
     <meta name="developer" content="Built with ♥️ by Kunal - probably while listening to rock music and drinking espresso" />
     <meta name="easter-egg" content="You found it! Email me 'I found the meta easter egg' for a virtual high-five 🚀" />
