--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
 
-    <!-- 🌐 Redirect to qualify4u.com -->
-    <meta http-equiv="refresh" content="0; URL='https://qualify4u.com'" />
+    <!-- 🌐 Redirect to https://automatemeetings.com/ -->
+    <meta http-equiv="refresh" content="0; URL='https://automatemeetings.com'" />
 
     <!-- Favicons -->
     <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
